# piggyback

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.yaml  piggyback.cabal
app/: Main.hs
prototypes/: TODO.md
prototypes/haskell/: CHANGELOG.md  piggyback.cabal
prototypes/haskell/app/: Main.hs
prototypes/ocaml/: dune-project  shell.nix  thing.opam
prototypes/ocaml/lib/: dune
prototypes/ocaml/test/: copy_2files.t  copy_file.t  dune  simple.t
src/: CUserInput.cpp  CUserInput.h  piggyback.cpp
