cabal-version:      2.4
name:               piggyback
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Backup/Archive app for the mildly paranoid

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Brian Hughes
maintainer:         b7rian@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable piggyback
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
